tulip-cli-dev: use jython-cli to run Jython scripts